[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-mcp-server"
version = "0.1.0"
description = "MCP server for querying Sonatype Nexus Repository Manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Addo Zhang", email = "addo.zhang@gmail.com" }
]
mcpName = "io.github.addozhang/nexus"
keywords = ["mcp", "nexus", "sonatype", "repository", "maven", "pypi", "docker", "oss", "pro"]

[project.urls]
Homepage = "https://github.com/addozhang/nexus-mcp-server"
Repository = "https://github.com/addozhang/nexus-mcp-server"
Issues = "https://github.com/addozhang/nexus-mcp-server/issues"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
nexus-mcp = "nexus_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
